[package]
name = "azure-iothub"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["native-tls"] }
tokio = "1.12"
clap = "2.33"
env_logger = "0.9"
chrono = "0.4"
serde_json = "1.0"
serde = "1.0"
anyhow = "1.0"

[dependencies.azure_iot_sdk]
git = "https://github.com/Advaly/azure-iot-sdk-rs"
rev = "945846b"
features = ["c2d-messages", "error-handling-messages"]
default-features = false

[profile.release]
opt-level = 'z'
lto = true
strip = true
